--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">FuriganaNeko</string>
-    <string name="to_furigana">to Furigana</string>
+    <string name="app_name">Furigana Transform</string>
+    <string name="to_furigana">Transform</string>
     <string name="import_files">File Process</string>
     <string name="scan">scan</string>
     <string name="input_hint">Input your text with kanji here.</string>
